--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,11 +37,11 @@
             android:label="@string/action_history"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".PpUpAndSMS.PopupTemplates"
+            android:name=".PopUpAndSMS.PopupTemplates"
             android:label="@string/action_popup_templates"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".PpUpAndSMS.SmsTemplates"
+            android:name=".PopUpAndSMS.SmsTemplates"
             android:label="@string/action_sms_templates"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
