--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,13 +52,9 @@
         <activity
             android:name=".ShareActivity"
             android:label="@string/title_activity_share"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" /><![CDATA[
             android:theme="@style/AppTheme.NoActionBar">
-        <activity
-            android:name=".NotificationReceiver"
-            android:label="@string/notification"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
+        ]]><activity
             android:name=".ReturnFromNotification"
             android:label="@string/notification"
             android:theme="@style/AppTheme.NoActionBar"></activity>
